<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/from" />
	<EditText android:id="@+id/from" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"/>
	</LinearLayout>
    
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/to" />
	<EditText android:id="@+id/to" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/password" />

	<EditText
	    android:id="@+id/password"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:inputType="textPassword" />

	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/host" />

	<EditText
	    android:id="@+id/host"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="smtp.gmail.com" />

	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/port" />

	<EditText
	    android:id="@+id/port"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="465" />

	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/sport" />

	<EditText
	    android:id="@+id/sport"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="465" />

	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/subject" />
		<EditText android:id="@+id/subject" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>
    	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/body" />
	<EditText android:id="@+id/body" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	
	<Button android:id="@+id/send" 
	  android:text="@string/send"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>